<resources>

    <string name="error_no_network">Erreur réseau. Vérifier vos paramètres de connexion.</string>
    <string name="error_contact_support">Une erreur est survenue, veuillez contacter le support technique.</string>
    <string name="update_app">Mise à jour disponible</string>
    <string name="update_message">Une nouvelle version de l\'application est disponible. Veuillez la télécharger maintenant pour continuer</string>
    <string name="update">Mettre à jour</string>
    <string name="no_internet_connexion">Aucune connexion internet</string>

    //Login
    <string name="enter_login_message">Saisissez votre identifiant</string>
    <string name="enter_code_message">Saisissez votre code</string>
    <string name="enter_code_description">6 chiffres</string>
    <string name="login_empty_error">Le champ identifiant est vide</string>
    <string name="login_unsafe_error">Le format de l\'identifiant est incorrect</string>
    <string name="hint_login">Identifiant</string>
    <string name="confirm">Valider</string>
    <string name="erase">Effacer</string>
    <string name="ok">OK</string>
    <string name="cancel">Annuler</string>

    //Category list
    <string name="privacy_policy">Politique de confidentialité</string>
    <string name="policy_confirmation">J\'ai lu et j\'accepte</string>
    <string name="you_have">Vous avez</string>
    <plurals name="available_vouchers">
        <item quantity="one">coupon disponible</item>
        <item quantity="other">coupons disponibles</item>
    </plurals>
    <string name="categories_title">Mes coupons :</string>
    <string name="available">Disponibles</string>
    <string name="used">Utilisés</string>
    <string name="cancelled">Annulés</string>
    <string name="available_vouchers_list">Liste des coupons disponibles de la catégorie %s</string>
    <string name="used_vouchers_list">Liste des coupons utilisés de la catégorie %s</string>
    <string name="cancelled_vouchers_list">Liste des coupons annulés de la catégorie %s</string>
    <string name="back">Retour</string>
    <string name="usable_start_date">Utilisable à partir du %s</string>
    <string name="on_hold">En attente</string>
    <string name="usage_date">Utilisé le %s</string>
    <string name="cancellation_date">Annulé le %s</string>
    <string name="usable_end_date">Utilisable jusqu\'au %s</string>
    <string name="usable_single_date">Utilisable le %s</string>
    <string name="to_retrieve">À retirer chez :</string>
    <string name="retrieved">Retiré chez :</string>
    <string name="retailer">Fournisseur :</string>

    //Vouchers
    <string name="voucher_number">Numéro: %s</string>
    <string name="voucher_date">Utilisable du %s au %s</string>
    <string name="comment">Commentaire</string>
    <string name="send">Envoyer</string>
    <string name="requests_in_progress">Demandes en cours</string>
    <string name="in_progress_highlighted_text">en cours</string>
    <string name="delete_voucher_request_confirmation">Voulez‑vous vraiment supprimer cette demande ?</string>
    <string name="no_ongoing_request">Aucune demande en cours</string>
    <string name="creation">Création:</string>
    <string name="date_time">%s à %s</string>
    <string name="information">i</string>
    <string name="more">Voir plus</string>
    <string name="go_to_retailer">Rendez-vous chez :</string>
    <string name="retrievable_by_contributor_also">Coupon également récupérable par un intervenant</string>
    <string name="retrievable_by_contributor_only">Coupon uniquement récupérable par un intervenant</string>
    <string name="call">Appeler</string>
    <string name="write_email">Écrire un e-mail</string>
    <string name="see_directions">Voir l\'itinéraire</string>
    <string name="display_voucher">Accéder au coupon</string>
    <string name="use_voucher">Utiliser ce coupon</string>
    <string name="application_not_found">Application cartographique introuvable</string>
    <string name="use_voucher_message">CLIQUEZ SUR \"UTILISER CE COUPON\" POUR L\'ACTIVER</string>
    <string name="voucher_non_available">NON DISPONIBLE</string>
    <string name="voucher_on_hold">EN ATTENTE</string>
    <string name="voucher_non_retrievable">NON RÉCUPÉRABLE</string>
    <string name="voucher_used">UTILISÉ</string>
    <string name="voucher_canceled">ANNULÉ</string>
    <string name="voucher_inexistent">INEXISTANT</string>

    //Profile
    <string name="my_profile">Mon Profil</string>
    <string name="my_data">Mes informations</string>
    <string name="login">Login</string>
    <string name="surname">Nom</string>
    <string name="name">Prénom</string>
    <string name="referent">Référent</string>
    <string name="birth">Date et lieu\nde naissance</string>
    <string name="birth_data">%s\nà %s</string>
    <string name="phone">Téléphone</string>
    <string name="address">Adresse</string>
    <string name="bo_access">Accès application web</string>
    <string name="bo_two_factor_auth_none">La double authentification sur l\'application web est désactivée</string>
    <string name="bo_two_factor_auth_by_app">Génerer un code d\'accès à votre compte sur l\'application web</string>
    <string name="bo_two_factor_auth_by_mail">La double authentification sur l\'application web se fait par mail</string>
    <string name="access">Générer un code</string>
    <string name="my_vouchers">Mes coupons</string>
    <string name="emitted">Émis</string>
    <string name="empty_value">-</string>
    <plurals name="voucher_stat_format">
        <item quantity="one">%s coupon</item>
        <item quantity="other">%s coupons</item>
    </plurals>
    <string name="new_line">\n</string>
    <string name="bo_sign_in_description">Veuillez utiliser ce code pour vous connecter à votre compte sur l\'application web</string>
    <string name="bo_code_expiration">Ce code expire dans:</string>
    <string name="empty_time">--:--</string>
    <string name="privacy_policy_underlined"><u>Politique de confidentialité</u></string>

    //Messages
    <string name="mail">Messagerie</string>
    <string name="sent">Envoyés</string>
    <string name="received">Reçus</string>
    <string name="no_received_message">Aucun message reçu</string>
    <string name="no_sent_message">Aucun message envoyé</string>
    <string name="priority_information">Information</string>
    <string name="priority_warning">Avertissement</string>
    <string name="priority_important">Important</string>
    <string name="priority_critical">Critique</string>
    <string name="sent_at">Envoyé le %s à %s</string>
    <string name="select_subject">Sélectionner un sujet</string>
    <string name="new_mail">Nouveau message</string>
    <string name="reply">Répondre</string>
    <string name="mail_body">Message</string>
    <string name="empty_mail_subject_error">Veuillez sélectionner l\'objet du message</string>
    <string name="empty_mail_body_error">Le contenu du message est vide</string>
    <string name="delete">Suppression</string>
    <string name="delete_mail_confirmation">Voulez‑vous vraiment supprimer ce message ?</string>

    //Alert
    <string name="notifications">Notifications</string>
    <string name="no_notification">Aucune notification reçue</string>
    <string name="received_at">Reçu le %s à %s</string>

</resources>